# covid-sc

./: LICENSE  Procfile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml
apps/hospitals/: models.py  views.py
apps/hospitals/admin/: __init__.py  hospital.py  hospital_user.py
apps/hospitals/migrations/: 0003_occupation_report.py  0004_hospitaluser.py  0005_hospital_acronym.py  0006_auto_20200424_1417.py
covid_sc/: models.py  settings.py  urls.py  wsgi.py
covid_sc/migrations/: 0002_auto_20200421_2028.py
hospitals/: models.py
hospitals/migrations/: 0001_initial.py
static/css/: base.css
templates/: base.html  index.html
templates/hospital/: general_data.html  show.html
templates/registration/: logged_out.html  login.html  password_reset_done.html  password_reset_form.html
